2005-01-24  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedview.c, src/dedtype.c, src/dedscan.c, src/ded2s.c:
	Intel compiler warning

	* aclocal.m4: comments for CF_FIND_LIBRARY

	* src/ded2s.c: add a cast to quiet compiler

2004-09-16  Thomas E. Dickey  <dickey@invisible-island.net>

	* configure: RCS_BASE

	* aclocal.m4: update CF_CHECK_CACHE

	* COPYING: change to diffstat's style of copyright

	* user/ded.man: add copyright notice

	* user/ded.man:
	documented the -D option and the way it affects the T command

	* user/ded.man: workarounds for groff-breakage.

2004-09-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedline.c: implement -D option, for editing dates

	* src/inline.c: tidying up whitespace

	* src/ded.c: added -D option, for editing dates

	* src/ded.h: implement -D option

2004-03-18  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedname.c, src/ftree.c:
	update old_wd if we rename the directory it was.

2004-03-08  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/dedview.c: add a cast to ensure that "%ld" honored.

	* configure.in: remove certify

2004-03-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/boxchars.c, src/ded.c, src/ded2s.c, src/dedblip.c, src/dedcmds.c, src/dedcolor.c, src/deddoit.c, src/deddump.c, src/dedfind.c, src/dedfree.c, src/dedline.c, src/dedmake.c, src/dedmsgs.c, src/dedname.c, src/dedread.c, src/dedring.c, src/dedscan.c, src/dedshow.c, src/dedsigs.c, src/dedsize.c, src/dedsort.c, src/dedtags.c, src/dedtype.c, src/deduniq.c, src/dedview.c, src/dedwait.c, src/dlog.c, src/ftree.c, src/history.c, src/inline.c, src/restat.c, src/showpath.c, src/sortset.c:
	remove K&R support, indent'd

	* src/ded.h: remove K&R support

	* makefile.in: remove certify

2003-11-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* install-sh: resync with my-autoconf

2003-07-02  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/ded.c: